feat/spring: update CORS configuration across gateway YAML files and CorsConfig class